# cqmgr

./: .gitattributes  .gitignore  AGENTS.md  CONTEXT.md  DESIGN.md  PRODUCT.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: cocogitto.yml  codeql.yml  dependency-review.yml  python.yml  scorecard.yml
.hooks/: pre-push.sh
.serena/: .gitignore  project.yml
docs/: cli-tui-information-architecture.md  operator-workflows.md  product-requirements.md  runtime-integration-architecture.md  status-output-watch-contracts.md  verification-distribution-contract.md
docs/adr/: 0001-python-runtime-and-google-cloud-integration.md  0002-use-native-keyrings-for-local-secrets.md  0003-use-versioned-accelerator-overlays-and-product-snapshots.md  0004-use-a-versioned-federated-provider-inventory.md  0005-use-non-atomic-ordered-request-bundles.md
docs/agents/: issue-tracker.md
docs/research/: credential-storage-backends.md  runtime-tui-packaging-options.md
scripts/: artifact_persistence_smoke.py  artifact_read_only_fixture.py  smoke_tool_install.py  verify_dependency_license_exceptions.py  verify_distribution.py
src/cqmgr/: __init__.py  __main__.py  bootstrap.py  cli.py  google_read_only.py  tui.py
src/cqmgr/adapters/: __init__.py  clock.py
src/cqmgr/application/: __init__.py  configuration.py
src/cqmgr/domain/: __init__.py  accelerator_overlay.py  apply_records.py  audit.py  catalog.py  diagnostics.py  identity.py  obtainability.py  plan_consumption.py  plans.py  projects.py  quota_queries.py  quotas.py  redaction.py  results.py  schemas.py  scopes.py  status.py  time.py  watch.py
tests/: test_artifact_read_only_smoke_contract.py  test_cli.py  test_cursor_cli_offline.py  test_dependency_license_exceptions.py  test_google_read_only_bootstrap.py  test_lifecycle_cli.py  test_lifecycle_cross_surface.py  test_lifecycle_runtime_bootstrap.py  test_local_cli.py  test_package.py  test_read_only_bootstrap.py  test_read_only_cli.py  test_trust_cli.py
tests/adapters/: __init__.py  test_audit_cli.py  test_compute_accelerator_catalog_edges.py  test_config_persistence.py  test_google_catalog_adapter_edges.py  test_google_catalog_reads.py  test_google_identity.py  test_google_projects.py  test_google_provider_reads.py  test_google_quota_preference_writes.py  test_google_spot_advice.py  test_google_watch_observation.py  test_lifecycle_cli.py  test_obtainability_cli_presentation.py  test_operation_result_serialization.py  test_protected_lifecycle_factory.py  test_quota_snapshot_serialization.py  test_read_only_cli_presentation.py  test_read_only_cli_requests.py  test_workload_result_serialization.py
tests/adapters/tui/: __init__.py  test_app.py  (+1 more)
tests/application/: test_apply_operations.py  test_audit_operations.py  test_contact_reference_lifecycle.py  test_contact_resolution.py  test_issue34_read_port_guards.py  test_lifecycle_apply_refreshers.py  test_lifecycle_operations.py  test_lifecycle_request_operations.py  test_local_operations.py  test_obtainability_operations.py  test_preview_operations.py  test_quota_operations.py  test_read_only_operations.py  test_scope_resolution.py  test_trust_operations.py  test_watch_operations.py  test_workload_operation_edges.py
tests/domain/: __init__.py  test_accelerator_catalog_contract.py  test_accelerator_overlay.py  test_apply_records.py  test_audit_contract.py  test_audited_write.py  test_catalog_predicates.py  test_diagnostics_contract.py  test_identity_evidence.py  test_identity_quantities.py  test_identity_quota_slices.py  test_identity_scopes.py  test_issue34_model_guards.py  test_obtainability.py  test_project_resolution.py  test_provider_read_evidence.py  test_quota_queries.py  test_redaction_contract.py  test_results_fail_closed.py  test_results_validation.py  test_schemas.py  test_status_invariants.py  test_status_results.py  test_watch_lifecycle.py  test_workload_model_invariants.py  test_workload_resolver.py
tests/persistence/: test_audit_journal.py  test_coordination.py  test_installation_trust.py  test_quota_snapshots.py  test_watch_checkpoints.py
tests/plans/: __init__.py  test_apply_record_repository.py  test_plan_codec.py  test_plan_consumption.py  test_plan_repository.py  test_secret_store.py
(+83 files in other folders)
